<resources>
    <string name="app_name">Sales Force Mobile</string>
    <string name="WelcomeTo">Welcome to</string>
    <string name="rememberMe">Remember me</string>
    <string name="forgotPassword"><a href="">Forgot your password?</a></string>
    <string name="clickHereToRegister"><a href="">Register</a></string>
    <string name="CreateNewAccount">Create new\naccount</string>
    <string name="EnterYourName">Enter your name</string>
    <string name="HowYouWillSignIn">How you will\nsign in</string>
    <string name="EnterYourEmail">Enter your email</string>
    <string name="ProtectYourInformation">Protect your\ninformation</string>
    <string name="CreatePassword">Create a password</string>
    <string name="resetPassword">Reset Password</string>
    <string name="reset">Reset</string>
    <string name="resetPasswordDescriptionLabel">We will send you an email with a link to reset your password. Please check your Spam folder.</string>
    <string name="login">Login</string>
    <string name="Search">Search</string>
    <string name="AdvancedSearch">Advanced Search</string>
    <string name="AccountSettings">Account Settings</string>
    <string name="logout">Logout</string>
    <string name="searchOnly">Search only:</string>
    <string name="Active">Active</string>
    <string name="Inactive">Inactive</string>
    <string name="All">All</string>
    <string name="MatchAll">Match all</string>
    <string name="MatchCase">Match case</string>
    <string name="Words">Words</string>
    <string name="Password">Password</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="Email">E-mail</string>
    <string name="preferredTime">Preferred Time</string>
    <string name="Details">Details</string>
    <string name="Company">Company</string>
    <string name="CompanyName">Company Name</string>
    <string name="OIB">OIB</string>
    <string name="WebPage">Web Page</string>
    <string name="Income">Income</string>
    <string name="emailAlreadyInUse">Email address is already in use.</string>
    <string name="firstNameEmptyMessage">First name cannot be empty.</string>
    <string name="lastNameEmptyMessage">Last name cannot be empty.</string>
    <string name="emailEmptyMessage">E-mail cannot be empty.</string>
    <string name="malformedEmailMessage">Malformed email address.</string>
    <string name="passwordEmptyMessage">Password cannot be empty.</string>
    <string name="wrongConfirmPassword">Specified passwords do not match.</string>
    <string name="companyNameEmptyMessage">Company name cannot be empty.</string>
    <string name="oibEmptyMessage">OIB cannot be empty.</string>
    <string name="oibOnlyDigitsMessage">OIB must contain only digits.</string>
    <string name="noCompanyChosenMessage">No Company chosen.</string>
    <string name="Home">Home</string>
    <string name="Companies">Companies</string>
    <string name="Contacts">Contacts</string>
    <string name="noCompanyFoundError">No company found</string>
    <string name="noUserFound">No user found</string>
    <string name="verificationEmailSentPrefix">Verification email sent:\n</string>
    <string name="verificationEmailErrorPrefix">Error sending verification email:</string>
    <string name="checkYourEmail">Please check your email</string>
    <string name="newCompanyCreated">New Company created</string>
    <string name="companyUpdated">Company updated</string>
    <string name="newContactCreated">New Contact created</string>
    <string name="contactUpdated">Contact updated</string>
    <string name="addContact">Add Contact</string>
    <string name="addCompany">Add Company</string>
    <string name="viewContacts">View all contacts</string>
    <string name="viewCompanies">View all companies</string>
    <string name="allContacts">All Contacts</string>
    <string name="allCompanies">All Companies</string>
    <string name="newContact">New Contact</string>
    <string name="newCompany">New Company</string>
    <string name="editContact">Edit Contact</string>
    <string name="editCompany">Edit Company</string>
    <string name="chooseCompany">Choose Company</string>
    <string name="sendEmailChooser">Send email</string>
    <string name="dialPhoneChooser">Dial phone number</string>
    <string name="sendTextChooser">Send text</string>
    <string name="openWebChooser">Open in browser</string>
    <string name="emailGreeting">Dear</string>
    <string name="smsGreeting">Hi</string>
    <string name="wrongEmail">E-mail is empty</string>
    <string name="wrongPhoneNumber">Phone number is empty</string>
    <string name="wrongWebPage">Web page is empty</string>
    <string name="noSuitableEmailAppFound">There are no email clients installed.</string>
    <string name="noSuitableAppFound">Please install an application that can do what you need.</string>
    <string name="Save">Save</string>
    <string name="Edit">Edit</string>
    <string name="Next">Next</string>
    <string name="Finish">Finish</string>
    <string name="Select">Select</string>
    <string name="change">Change</string>
    <string name="changePassword">Change Password</string>
    <string name="oldPassword">Old Password</string>
    <string name="newPassword">New Password</string>
    <string name="sameOldNewPasswordMessage">New password cannot be the same as old password.</string>
    <string name="passChangeSuccess">Password changed successfully!</string>
    <string name="UNDEFINED">UNDEFINED</string>
    <string name="ACTIVE">ACTIVE</string>
    <string name="INACTIVE">INACTIVE</string>
    <string name="Mr">Mr.</string>
    <string name="Mrs">Mrs.</string>
    <string name="Ms">Ms.</string>
    <string name="Miss">Miss</string>
    <string name="Morning">Morning</string>
    <string name="Afternoon">Afternoon</string>
    <string name="Platinum">Platinum</string>
    <string name="Gold">Gold</string>
    <string name="Silver">Silver</string>
    <string name="Bronze">Bronze</string>
    <string name="Phone">Phone</string>
    <string name="VideoCall">Video call</string>
    <string name="Meeting">Meeting</string>
    <string-array name="status_array">
        <item>@string/ACTIVE</item>
        <item>@string/INACTIVE</item>
    </string-array>
    <string-array name="contactTitle_array">
        <item>@string/UNDEFINED</item>
        <item>@string/Mr</item>
        <item>@string/Mrs</item>
        <item>@string/Ms</item>
        <item>@string/Miss</item>
    </string-array>
    <string-array name="contactPreferredTime_array">
        <item>@string/UNDEFINED</item>
        <item>@string/Morning</item>
        <item>@string/Afternoon</item>
    </string-array>
    <string-array name="companyCVS_array">
        <item>@string/UNDEFINED</item>
        <item>@string/Platinum</item>
        <item>@string/Gold</item>
        <item>@string/Silver</item>
        <item>@string/Bronze</item>
    </string-array>
    <string-array name="companyCommunicationType_array">
        <item>@string/UNDEFINED</item>
        <item>@string/Phone</item>
        <item>@string/VideoCall</item>
        <item>@string/Meeting</item>
    </string-array>
    <string-array name="companyEmployees_array">
        <item>@string/UNDEFINED</item>
        <item>&lt;10</item>
        <item>10–24</item>
        <item>25–49</item>
        <item>50–99</item>
        <item>100–199</item>
        <item>200–499</item>
        <item>500–999</item>
        <item>1000–4999</item>
        <item>5000–10000</item>
        <item>&gt;10000</item>
    </string-array>
    <string name="databaseCollectionUsers" translatable="false">Users</string>
    <string name="databaseCollectionContacts" translatable="false">Contacts</string>
    <string name="databaseCollectionCompanies" translatable="false">Companies</string>
    <string name="databaseDocumentName" translatable="false">name</string>
    <string name="databaseDocumentFirstName" translatable="false">firstName</string>
    <string name="databaseDocumentLastName" translatable="false">lastName</string>
    <string name="transitionNameContactAvatar">contactAvatar</string>
    <string name="transitionNameCompanyAvatar">companyAvatar</string>
    <string name="EXTRA_IS_EDITOR_FOR_NEW_ITEM" translatable="false">hr.atoscvc.salesforcemobile.EXTRA_IS_EDITOR_FOR_NEW_ITEM</string>
    <string name="EXTRA_CONTACT_ENTIRE_OBJECT" translatable="false">hr.atoscvc.salesforcemobile.EXTRA_CONTACT_ENTIRE_OBJECT</string>
    <string name="EXTRA_CONTACT_IS_LIST_FOR_SELECT" translatable="false">hr.atoscvc.salesforcemobile.EXTRA_CONTACT_IS_LIST_FOR_SELECT</string>
    <string name="EXTRA_CONTACT_HIDE_EDIT_BUTTONS" translatable="false">hr.atoscvc.salesforcemobile.EXTRA_CONTACT_HIDE_EDIT_BUTTONS</string>
    <string name="EXTRA_CONTACT_DOCUMENT_ID" translatable="false">hr.atoscvc.salesforcemobile.EXTRA_CONTACT_DOCUMENT_ID</string>
    <string name="EXTRA_CONTACT_STATUS_SPINNER_INDEX" translatable="false">hr.atoscvc.salesforcemobile.EXTRA_CONTACT_STATUS_SPINNER_INDEX</string>
    <string name="EXTRA_CONTACT_TITLE_SPINNER_INDEX" translatable="false">hr.atoscvc.salesforcemobile.EXTRA_CONTACT_TITLE_SPINNER_INDEX</string>
    <string name="EXTRA_CONTACT_PREF_TIME_SPINNER_INDEX" translatable="false">hr.atoscvc.salesforcemobile.EXTRA_CONTACT_PREF_TIME_SPINNER_INDEX</string>
    <string name="EXTRA_CONTACT_FIRST_NAME" translatable="false">hr.atoscvc.salesforcemobile.EXTRA_CONTACT_FIRST_NAME</string>
    <string name="EXTRA_CONTACT_LAST_NAME" translatable="false">hr.atoscvc.salesforcemobile.EXTRA_CONTACT_LAST_NAME</string>
    <string name="EXTRA_CONTACT_COMPANY" translatable="false">hr.atoscvc.salesforcemobile.EXTRA_CONTACT_COMPANY</string>
    <string name="EXTRA_CONTACT_PHONE" translatable="false">hr.atoscvc.salesforcemobile.EXTRA_CONTACT_PHONE</string>
    <string name="EXTRA_CONTACT_EMAIL" translatable="false">hr.atoscvc.salesforcemobile.EXTRA_CONTACT_EMAIL</string>
    <string name="EXTRA_CONTACT_DETAILS" translatable="false">hr.atoscvc.salesforcemobile.EXTRA_CONTACT_DETAILS</string>
    <string name="EXTRA_COMPANY_ENTIRE_OBJECT" translatable="false">hr.atoscvc.salesforcemobile.EXTRA_COMPANY_ENTIRE_OBJECT</string>
    <string name="EXTRA_COMPANY_IS_LIST_FOR_SELECT" translatable="false">hr.atoscvc.salesforcemobile.EXTRA_COMPANY_IS_LIST_FOR_SELECT</string>
    <string name="EXTRA_COMPANY_HIDE_EDIT_BUTTONS" translatable="false">hr.atoscvc.salesforcemobile.EXTRA_COMPANY_HIDE_EDIT_BUTTONS</string>
    <string name="EXTRA_COMPANY_DOCUMENT_ID" translatable="false">hr.atoscvc.salesforcemobile.EXTRA_COMPANY_DOCUMENT_ID</string>
    <string name="EXTRA_COMPANY_STATUS_SPINNER_INDEX" translatable="false">hr.atoscvc.salesforcemobile.EXTRA_COMPANY_STATUS_SPINNER_INDEX</string>
    <string name="EXTRA_COMPANY_CVS_SPINNER_INDEX" translatable="false">hr.atoscvc.salesforcemobile.EXTRA_COMPANY_CVS_SPINNER_INDEX</string>
    <string name="EXTRA_COMPANY_COMMUNICATION_TYPE_SPINNER_INDEX" translatable="false">hr.atoscvc.salesforcemobile.EXTRA_COMPANY_COMMUNICATION_TYPE_SPINNER_INDEX</string>
    <string name="EXTRA_COMPANY_EMPLOYEES_SPINNER_INDEX" translatable="false">hr.atoscvc.salesforcemobile.EXTRA_COMPANY_EMPLOYEES_SPINNER_INDEX</string>
    <string name="EXTRA_COMPANY_NAME" translatable="false">hr.atoscvc.salesforcemobile.EXTRA_COMPANY_NAME</string>
    <string name="EXTRA_COMPANY_OIB" translatable="false">hr.atoscvc.salesforcemobile.EXTRA_COMPANY_OIB</string>
    <string name="EXTRA_COMPANY_WEB_PAGE" translatable="false">hr.atoscvc.salesforcemobile.EXTRA_COMPANY_WEB_PAGE</string>
    <string name="EXTRA_COMPANY_PHONE" translatable="false">hr.atoscvc.salesforcemobile.EXTRA_COMPANY_PHONE</string>
    <string name="EXTRA_COMPANY_INCOME" translatable="false">hr.atoscvc.salesforcemobile.EXTRA_COMPANY_INCOME</string>
</resources>