<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".CompanyEditFragment">

    <Spinner
        android:id="@+id/spCompanyStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/spCompanyCvsSegment"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/spCompanyCvsSegment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/etCompanyOIB"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etCompanyName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginRight="65dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/CompanyName"
        android:inputType="textCapSentences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spCompanyCvsSegment" />

    <EditText
        android:id="@+id/etCompanyOIB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginRight="65dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/OIB"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCompanyName" />

    <EditText
        android:id="@+id/etCompanyWebPage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginRight="65dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/WebPage"
        android:inputType="textWebEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCompanyOIB" />

    <EditText
        android:id="@+id/etCompanyPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginRight="65dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="8dp"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/ic_action_phone"
        android:ems="10"
        android:hint="@string/PhoneNumber"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCompanyWebPage" />

    <MultiAutoCompleteTextView
        android:id="@+id/etCompanyDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginRight="65dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="8dp"
        android:hint="@string/Details"
        android:inputType="textMultiLine|textCapSentences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCompanyPhone" />

    <EditText
        android:id="@+id/etCompanyIncome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginRight="65dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/Income"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCompanyDetails" />

    <Spinner
        android:id="@+id/spCompanyCommunicationType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/etCompanyIncome"
        app:layout_constraintTop_toBottomOf="@+id/etCompanyIncome" />

    <Spinner
        android:id="@+id/spCompanyEmployees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/spCompanyCommunicationType"
        app:layout_constraintStart_toEndOf="@+id/spCompanyCommunicationType" />

    <Button
        android:id="@+id/btnCompanySave"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/Save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spCompanyCommunicationType" />

</android.support.constraint.ConstraintLayout>
